# MyClawTradingBot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  pyproject.toml  tmp_gen_hypotheses_20260221.py
config/: gateway.yaml  risk_params.yaml  settings.yaml
deploy/: myclaw-gateway.service  myclaw.service  myclaw.timer
journal/: 2026-02-20.md  2026-02-21.md
scripts/: daemon.sh  emergency_stop.sh  run_coder.sh  run_cycle.sh  run_reviewer.sh  setup_vps.sh
src/api/: README.md  hl_client.py
src/brain/: brain.sh  brain_consensus.py  build_context.py  ooda_processor.py  self_improve.sh  signal_merger.py
src/brain/prompts/: system_prompt.md
src/brain/schemas/: signal_schema.json
src/collector/: chart_generator.py  chart_generator.py.bak  data_collector.py  data_collector.py.bak  data_health_check.py
src/executor/: trade_executor.py
src/gateway/: claude_cli.py  server.py
src/hypothesis/: archiver.py  backtester.py  fft_hypothesis_backtest.py  manager.py
src/monitor/: monitor.py  performance_tracker.py  telegram_notifier.py
src/risk/: kill_switch.py  risk_manager.py
src/state/: state_manager.py
src/strategy/: base.py  btc_rubber_wall.py  eth_rubber_band.py  sol_rubber_wall.py  wave_rider.py
src/utils/: config_loader.py  crypto.py  file_lock.py  logger.py  retry.py
tests/: README.md  conftest.py  test_brain.py  test_data_collector.py  test_executor.py  test_hl_client.py  test_integration.py  test_strategy.py  test_strategy_precheck.py
tests/helpers/: backtest_runner.py  candle_factory.py
